--- a/UserSettings/Search.settings
+++ b/UserSettings/Search.settings
@@ -10,6 +10,9 @@ scopes = {
 	"last_search.EAB0C2BA" = ""
 	"OpenInspectorPreview.EAB0C2BA" = "0"
 	"currentGroup.EAB0C2BA" = "all"
+	"last_search.2138236A" = "b:mater"
+	"OpenInspectorPreview.2138236A" = "0"
+	"currentGroup.2138236A" = "asset"
 }
 providers = {
 	adb = {
@@ -56,6 +59,7 @@ providers = {
 objectSelectors = {
 }
 recentSearches = [
+	"b:mater"
 ]
 searchItemFavorites = [
 ]
